fret-electron/support/LTLSIM_NuSMVParser/LTLAEXParser.js
// Generated from LTLAEX.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LTLAEXListener = require('./LTLAEXListener').LTLAEXListener;
var LTLAEXVisitor = require('./LTLAEXVisitor').LTLAEXVisitor;

var grammarFileName = "LTLAEX.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'='", "'<'", "'<='", "'>'", "'>='", "'('", 
                     "')'", "'^'", "'*'", "'/'", "'%'", "'+'", "'-'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      "ID", "NUMBER", "UINT", "WS" ];

var ruleNames =  [ "simpleExpr", "arithmetic_expr", "comparisonOp", "lp", 
                   "lpA", "rp", "rpA", "expt", "mult", "div", "mod", "plus", 
                   "minus", "negate" ];

function LTLAEXParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

LTLAEXParser.prototype = Object.create(antlr4.Parser.prototype);
LTLAEXParser.prototype.constructor = LTLAEXParser;

Object.defineProperty(LTLAEXParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

LTLAEXParser.EOF = antlr4.Token.EOF;
LTLAEXParser.T__0 = 1;
LTLAEXParser.T__1 = 2;
LTLAEXParser.T__2 = 3;
LTLAEXParser.T__3 = 4;
LTLAEXParser.T__4 = 5;
LTLAEXParser.T__5 = 6;
LTLAEXParser.T__6 = 7;
LTLAEXParser.T__7 = 8;
LTLAEXParser.T__8 = 9;
LTLAEXParser.T__9 = 10;
LTLAEXParser.T__10 = 11;
LTLAEXParser.T__11 = 12;
LTLAEXParser.T__12 = 13;
LTLAEXParser.ID = 14;
LTLAEXParser.NUMBER = 15;
LTLAEXParser.UINT = 16;
LTLAEXParser.WS = 17;

LTLAEXParser.RULE_simpleExpr = 0;
LTLAEXParser.RULE_arithmetic_expr = 1;
LTLAEXParser.RULE_comparisonOp = 2;
LTLAEXParser.RULE_lp = 3;
LTLAEXParser.RULE_lpA = 4;
LTLAEXParser.RULE_rp = 5;
LTLAEXParser.RULE_rpA = 6;
LTLAEXParser.RULE_expt = 7;
LTLAEXParser.RULE_mult = 8;
LTLAEXParser.RULE_div = 9;
LTLAEXParser.RULE_mod = 10;
LTLAEXParser.RULE_plus = 11;
LTLAEXParser.RULE_minus = 12;
LTLAEXParser.RULE_negate = 13;

function SimpleExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_simpleExpr;
    return this;
}

SimpleExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SimpleExprContext.prototype.constructor = SimpleExprContext;


 
SimpleExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function BoolCompareContext(parser, ctx) {
	SimpleExprContext.call(this, parser);
    SimpleExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BoolCompareContext.prototype = Object.create(SimpleExprContext.prototype);
BoolCompareContext.prototype.constructor = BoolCompareContext;

LTLAEXParser.BoolCompareContext = BoolCompareContext;

BoolCompareContext.prototype.arithmetic_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Arithmetic_exprContext);
    } else {
        return this.getTypedRuleContext(Arithmetic_exprContext,i);
    }
};

BoolCompareContext.prototype.comparisonOp = function() {
    return this.getTypedRuleContext(ComparisonOpContext,0);
};
BoolCompareContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterBoolCompare(this);
	}
};

BoolCompareContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitBoolCompare(this);
	}
};

BoolCompareContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitBoolCompare(this);
    } else {
        return visitor.visitChildren(this);
    }
};



LTLAEXParser.SimpleExprContext = SimpleExprContext;

LTLAEXParser.prototype.simpleExpr = function() {

    var localctx = new SimpleExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LTLAEXParser.RULE_simpleExpr);
    try {
        localctx = new BoolCompareContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 28;
        this.arithmetic_expr(0);
        this.state = 29;
        this.comparisonOp();
        this.state = 30;
        this.arithmetic_expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Arithmetic_exprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_arithmetic_expr;
    return this;
}

Arithmetic_exprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Arithmetic_exprContext.prototype.constructor = Arithmetic_exprContext;


 
Arithmetic_exprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function ArithContext(parser, ctx) {
	Arithmetic_exprContext.call(this, parser);
    Arithmetic_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArithContext.prototype = Object.create(Arithmetic_exprContext.prototype);
ArithContext.prototype.constructor = ArithContext;

LTLAEXParser.ArithContext = ArithContext;

ArithContext.prototype.NUMBER = function() {
    return this.getToken(LTLAEXParser.NUMBER, 0);
};
ArithContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterArith(this);
	}
};

ArithContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitArith(this);
	}
};

ArithContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitArith(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArithGroupContext(parser, ctx) {
	Arithmetic_exprContext.call(this, parser);
    Arithmetic_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArithGroupContext.prototype = Object.create(Arithmetic_exprContext.prototype);
ArithGroupContext.prototype.constructor = ArithGroupContext;

LTLAEXParser.ArithGroupContext = ArithGroupContext;

ArithGroupContext.prototype.lpA = function() {
    return this.getTypedRuleContext(LpAContext,0);
};

ArithGroupContext.prototype.arithmetic_expr = function() {
    return this.getTypedRuleContext(Arithmetic_exprContext,0);
};

ArithGroupContext.prototype.rpA = function() {
    return this.getTypedRuleContext(RpAContext,0);
};
ArithGroupContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterArithGroup(this);
	}
};

ArithGroupContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitArithGroup(this);
	}
};

ArithGroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitArithGroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArithBinaryContext(parser, ctx) {
	Arithmetic_exprContext.call(this, parser);
    Arithmetic_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArithBinaryContext.prototype = Object.create(Arithmetic_exprContext.prototype);
ArithBinaryContext.prototype.constructor = ArithBinaryContext;

LTLAEXParser.ArithBinaryContext = ArithBinaryContext;

ArithBinaryContext.prototype.arithmetic_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Arithmetic_exprContext);
    } else {
        return this.getTypedRuleContext(Arithmetic_exprContext,i);
    }
};

ArithBinaryContext.prototype.expt = function() {
    return this.getTypedRuleContext(ExptContext,0);
};

ArithBinaryContext.prototype.mult = function() {
    return this.getTypedRuleContext(MultContext,0);
};

ArithBinaryContext.prototype.div = function() {
    return this.getTypedRuleContext(DivContext,0);
};

ArithBinaryContext.prototype.mod = function() {
    return this.getTypedRuleContext(ModContext,0);
};

ArithBinaryContext.prototype.plus = function() {
    return this.getTypedRuleContext(PlusContext,0);
};

ArithBinaryContext.prototype.minus = function() {
    return this.getTypedRuleContext(MinusContext,0);
};
ArithBinaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterArithBinary(this);
	}
};

ArithBinaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitArithBinary(this);
	}
};

ArithBinaryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitArithBinary(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArithUnaryContext(parser, ctx) {
	Arithmetic_exprContext.call(this, parser);
    Arithmetic_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArithUnaryContext.prototype = Object.create(Arithmetic_exprContext.prototype);
ArithUnaryContext.prototype.constructor = ArithUnaryContext;

LTLAEXParser.ArithUnaryContext = ArithUnaryContext;

ArithUnaryContext.prototype.negate = function() {
    return this.getTypedRuleContext(NegateContext,0);
};

ArithUnaryContext.prototype.arithmetic_expr = function() {
    return this.getTypedRuleContext(Arithmetic_exprContext,0);
};
ArithUnaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterArithUnary(this);
	}
};

ArithUnaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitArithUnary(this);
	}
};

ArithUnaryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitArithUnary(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArithTermContext(parser, ctx) {
	Arithmetic_exprContext.call(this, parser);
    Arithmetic_exprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArithTermContext.prototype = Object.create(Arithmetic_exprContext.prototype);
ArithTermContext.prototype.constructor = ArithTermContext;

LTLAEXParser.ArithTermContext = ArithTermContext;

ArithTermContext.prototype.ID = function() {
    return this.getToken(LTLAEXParser.ID, 0);
};
ArithTermContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterArithTerm(this);
	}
};

ArithTermContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitArithTerm(this);
	}
};

ArithTermContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitArithTerm(this);
    } else {
        return visitor.visitChildren(this);
    }
};



LTLAEXParser.prototype.arithmetic_expr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new Arithmetic_exprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 2;
    this.enterRecursionRule(localctx, 2, LTLAEXParser.RULE_arithmetic_expr, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42;
        switch(this._input.LA(1)) {
        case LTLAEXParser.T__12:
            localctx = new ArithUnaryContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 33;
            this.negate();
            this.state = 34;
            this.arithmetic_expr(5);
            break;
        case LTLAEXParser.T__5:
            localctx = new ArithGroupContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 36;
            this.lpA();
            this.state = 37;
            this.arithmetic_expr(0);
            this.state = 38;
            this.rpA();
            break;
        case LTLAEXParser.NUMBER:
            localctx = new ArithContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 40;
            this.match(LTLAEXParser.NUMBER);
            break;
        case LTLAEXParser.ID:
            localctx = new ArithTermContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 41;
            this.match(LTLAEXParser.ID);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 65;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 63;
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new ArithBinaryContext(this, new Arithmetic_exprContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, LTLAEXParser.RULE_arithmetic_expr);
                    this.state = 44;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 45;
                    this.expt();
                    this.state = 46;
                    this.arithmetic_expr(6);
                    break;

                case 2:
                    localctx = new ArithBinaryContext(this, new Arithmetic_exprContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, LTLAEXParser.RULE_arithmetic_expr);
                    this.state = 48;
                    if (!( this.precpred(this._ctx, 4))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                    }
                    this.state = 52;
                    switch(this._input.LA(1)) {
                    case LTLAEXParser.T__8:
                        this.state = 49;
                        this.mult();
                        break;
                    case LTLAEXParser.T__9:
                        this.state = 50;
                        this.div();
                        break;
                    case LTLAEXParser.T__10:
                        this.state = 51;
                        this.mod();
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                    }
                    this.state = 54;
                    this.arithmetic_expr(5);
                    break;

                case 3:
                    localctx = new ArithBinaryContext(this, new Arithmetic_exprContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, LTLAEXParser.RULE_arithmetic_expr);
                    this.state = 56;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 59;
                    switch(this._input.LA(1)) {
                    case LTLAEXParser.T__11:
                        this.state = 57;
                        this.plus();
                        break;
                    case LTLAEXParser.T__12:
                        this.state = 58;
                        this.minus();
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                    }
                    this.state = 61;
                    this.arithmetic_expr(4);
                    break;

                } 
            }
            this.state = 67;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function ComparisonOpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_comparisonOp;
    return this;
}

ComparisonOpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ComparisonOpContext.prototype.constructor = ComparisonOpContext;


ComparisonOpContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterComparisonOp(this);
	}
};

ComparisonOpContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitComparisonOp(this);
	}
};

ComparisonOpContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitComparisonOp(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLAEXParser.ComparisonOpContext = ComparisonOpContext;

LTLAEXParser.prototype.comparisonOp = function() {

    var localctx = new ComparisonOpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LTLAEXParser.RULE_comparisonOp);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LTLAEXParser.T__0) | (1 << LTLAEXParser.T__1) | (1 << LTLAEXParser.T__2) | (1 << LTLAEXParser.T__3) | (1 << LTLAEXParser.T__4))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_lp;
    return this;
}

LpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LpContext.prototype.constructor = LpContext;


LpContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterLp(this);
	}
};

LpContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitLp(this);
	}
};

LpContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitLp(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLAEXParser.LpContext = LpContext;

LTLAEXParser.prototype.lp = function() {

    var localctx = new LpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, LTLAEXParser.RULE_lp);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this.match(LTLAEXParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LpAContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_lpA;
    return this;
}

LpAContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LpAContext.prototype.constructor = LpAContext;


 
LpAContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function LParithContext(parser, ctx) {
	LpAContext.call(this, parser);
    LpAContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LParithContext.prototype = Object.create(LpAContext.prototype);
LParithContext.prototype.constructor = LParithContext;

LTLAEXParser.LParithContext = LParithContext;

LParithContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterLParith(this);
	}
};

LParithContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitLParith(this);
	}
};

LParithContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitLParith(this);
    } else {
        return visitor.visitChildren(this);
    }
};



LTLAEXParser.LpAContext = LpAContext;

LTLAEXParser.prototype.lpA = function() {

    var localctx = new LpAContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, LTLAEXParser.RULE_lpA);
    try {
        localctx = new LParithContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 72;
        this.match(LTLAEXParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function RpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_rp;
    return this;
}

RpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RpContext.prototype.constructor = RpContext;


RpContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterRp(this);
	}
};

RpContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitRp(this);
	}
};

RpContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitRp(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLAEXParser.RpContext = RpContext;

LTLAEXParser.prototype.rp = function() {

    var localctx = new RpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, LTLAEXParser.RULE_rp);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        this.match(LTLAEXParser.T__6);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function RpAContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_rpA;
    return this;
}

RpAContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RpAContext.prototype.constructor = RpAContext;


 
RpAContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function RParithContext(parser, ctx) {
	RpAContext.call(this, parser);
    RpAContext.prototype.copyFrom.call(this, ctx);
    return this;
}

RParithContext.prototype = Object.create(RpAContext.prototype);
RParithContext.prototype.constructor = RParithContext;

LTLAEXParser.RParithContext = RParithContext;

RParithContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterRParith(this);
	}
};

RParithContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitRParith(this);
	}
};

RParithContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitRParith(this);
    } else {
        return visitor.visitChildren(this);
    }
};



LTLAEXParser.RpAContext = RpAContext;

LTLAEXParser.prototype.rpA = function() {

    var localctx = new RpAContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, LTLAEXParser.RULE_rpA);
    try {
        localctx = new RParithContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.match(LTLAEXParser.T__6);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExptContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_expt;
    return this;
}

ExptContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExptContext.prototype.constructor = ExptContext;


ExptContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterExpt(this);
	}
};

ExptContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitExpt(this);
	}
};

ExptContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLAEXVisitor ) {
        return visitor.visitExpt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLAEXParser.ExptContext = ExptContext;

LTLAEXParser.prototype.expt = function() {

    var localctx = new ExptContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, LTLAEXParser.RULE_expt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.match(LTLAEXParser.T__7);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MultContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLAEXParser.RULE_mult;
    return this;
}

MultContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MultContext.prototype.constructor = MultContext;


MultContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.enterMult(this);
	}
};

MultContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLAEXListener ) {
        listener.exitMult(this);
	}
};
